login,signup,home

--- a/RENTEE/addProduct.html
+++ b/RENTEE/addProduct.html
@@ -93,16 +93,13 @@
 
                             <ul class="header__navbar-user-menu">
                                 <li class="header__navbar-user-item">
-                                    <a href="">Tài khoản của tôi</a>
+                                    <a href="">Thông tin cá nhân</a>
                                 </li>
                                 <li class="header__navbar-user-item">
-                                    <a href="">Địa chỉ của tôi</a>
-                                </li>
-                                <li class="header__navbar-user-item">
-                                    <a href="">Đơn mua</a>
+                                    <a href="addProduct.html">Đăng sản phẩm</a>
                                 </li>
                                 <li class="header__navbar-user-item header__navbar-user-item--separate">
-                                    <a href="">Đăng xuất</a>
+                                    <a href="index.html">Đăng xuất</a>
                                 </li>
                             </ul>
                         </li>
