--- a/RENTEE/home.html
+++ b/RENTEE/home.html
@@ -105,29 +105,22 @@
                                 Trợ giúp
                             </a>
                         </li>
-                        <li><a class="js-register header__navbar-item header__navbar-item--bold header__navbar-item--separate"
-                                href="signUp.html">Đăng ký</a></li>
-                        <li><a class="js-login header__navbar-item header__navbar-item--bold" href="logIn.html">Đăng
-                                nhập</a></li>
-                        <!-- <li class="header__navbar-item header__navbar-user">
-                            <img src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t39.30808-6/278745912_726968738496356_2527730021978601616_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=oPZdpnUVw5QAX91rbG4&_nc_ht=scontent.fsgn3-1.fna&oh=00_AT_e9EPKvKsUpqK2bhVE-h0_w6ICJR0g8XkGx27aT_rlfQ&oe=62EAC102" alt="" class="header__navbar-user-img">
-                            <span class="header__navbar-user-name">Duy Khánh</span>
+                        <li class="header__navbar-item header__navbar-user">
+                            <img src="./assest/img/avatar.jpg" alt="" class="header__navbar-user-img">
+                            <span class="header__navbar-user-name">mytrinh07112002</span>
 
                             <ul class="header__navbar-user-menu">
                                 <li class="header__navbar-user-item">
-                                    <a href="">Tài khoản của tôi</a>
+                                    <a href="">Thông tin cá nhân</a>
                                 </li>
                                 <li class="header__navbar-user-item">
-                                    <a href="">Địa chỉ của tôi</a>
-                                </li>
-                                <li class="header__navbar-user-item">
-                                    <a href="">Đơn mua</a>
+                                    <a href="addProduct.html">Đăng sản phẩm</a>
                                 </li>
                                 <li class="header__navbar-user-item header__navbar-user-item--separate">
-                                    <a href="">Đăng xuất</a>
+                                    <a href="index.html">Đăng xuất</a>
                                 </li>
                             </ul>
-                        </li> -->
+                        </li>
                     </ul>
                 </nav>
 
