--- a/RENTEE/logIn.html
+++ b/RENTEE/logIn.html
@@ -23,14 +23,14 @@
                     <a class="auth-form__switch-btn" href="signUp.html">Đăng ký</a>
                 </div>
 
-                <div class="auth-form__form">
+                <form class="auth-form__form">
                     <div class="auth-form__group">
                         <input type="text" class="auth-form__input" placeholder="Email">
                     </div>
                     <div class="auth-form__group">
                         <input type="password" class="auth-form__input" placeholder="Mật khẩu">
                     </div>
-                </div>
+                </form>
 
                 <div class="auth-form__aside">
                     <div class="auth-form__help">
