--- a/RENTEE/signUp.html
+++ b/RENTEE/signUp.html
@@ -23,7 +23,7 @@
                     <a class="auth-form__switch-btn" href="logIn.html">Đăng nhập</a>
                 </div>
 
-                <div class="auth-form__form">
+                <form class="auth-form__form">
                     <div class="auth-form__group">
                         <input type="text" class="auth-form__input" placeholder="Email">
                     </div>
@@ -33,7 +33,7 @@
                     <div class="auth-form__group">
                         <input type="password" class="auth-form__input" placeholder="Nhập lại mật khẩu">
                     </div>
-                </div>
+                </form>
 
                 <div class="auth-form__aside">
                     <p class="auth-form__policy-text">
